# medaitor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build-docker.sh  deepgram.md  deployment-options.md  docker-compose.yml  package.json  pyproject.toml  requirements.md  run-app-docker.sh  run-app.sh  stack-options.md  ui-test-report.md  ui-test.js
.claude/commands/: ui-test.md
rules/: default.md
src/medaitor/: __init__.py  config.py  main.py
src/medaitor/api/: __init__.py  routes.py  websocket.py
src/medaitor/services/: room_manager.py  transcription.py
src/medaitor/templates/: base.html  index.html
tests/: __init__.py
